// Generated file
import "ccsds_mal/types.proto";



package timeBasedDataType.protobuf;

message TimeBasedDataLong {
extensions 4 to 104;

  optional ccsds_mal.protobuf.FINETIME timeStamp = 1;
  optional ccsds_mal.protobuf.STRING name = 2;
  optional ccsds_mal.protobuf.LONG value = 3;
}
